# DynamicBoltzmannPaper

./: .gitignore  README.md
bimol_test/: CMakeLists.txt  README.md  create_data_dirs.py
bimol_test/mathematica/: learned_trajs_hidden.nb  learned_trajs_visible.nb  mse.nb
bimol_test/src/: learned_trajs_hidden.cpp  learned_trajs_visible.cpp  sample_hidden.cpp  sample_visible.cpp
bimol_test_stoch_sim/: CMakeLists.txt  README.md  create_data_dirs.py
bimol_test_stoch_sim/mathematica/: count_triplets_quartics.nb
bimol_test_stoch_sim/src/: learn_ic.cpp  main.cpp
bimol_train/: CMakeLists.txt  README.md  create_data_dirs.py
bimol_train/mathematica/: colored_trajs.nb  correlation.nb  hidden_monitor_progress.nb  visible_monitor_progress.nb
bimol_train/src/: learned_trajs_hidden.cpp  learned_trajs_visible.cpp  main_hidden.cpp  main_visible.cpp
bimol_train_stoch_sim/: CMakeLists.txt  README.md  create_data_dirs.py  create_data_dirs_ic.py  create_data_dirs_stoch_sim.py
bimol_train_stoch_sim/mathematica/: figures.nb  ic_learned.nb  moments.nb  monitor_progress_learn_ic.nb  visualize_lattice.nb
bimol_train_stoch_sim/src/: learn_ic.cpp  main.cpp  main.cpp~
hermite/: hermite.nb
rossler_dynamic_3sp/: CMakeLists.txt  README.md  create_data_dirs.py
rossler_dynamic_3sp/mathematica/: moments.nb  monitor_progress_ixn_params.nb  monitor_progress_moments.nb  sample.nb  trajs.nb
rossler_dynamic_3sp/src/: activate.cpp  dbm.hpp  learn_sequential.cpp  sample.cpp
rossler_ic_layers_3sp/: CMakeLists.txt  create_data_dirs.py
rossler_ic_layers_3sp/mathematica/: activate_layers.nb  calculate_means.nb  ic_traj.nb  monitor_progress_ixn_params.nb  monitor_progress_moments.nb  sample.nb
rossler_ic_layers_3sp/src/: dbm_3species.hpp  sample_layers.cpp  solve_cd.cpp  solve_pcd.cpp
rossler_stoch_sims/: CMakeLists.txt  README.md  create_data_dirs.py
rossler_stoch_sims/mathematica/: calculate_means.nb  check_means.nb  check_moments.nb  moments.nb  visualize_lattice.nb
rossler_stoch_sims/src/: dbm_v1.hpp  dbm_v2.hpp  main.cpp  sample_ic.cpp
